<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C1DEF8"
    android:orientation="vertical"
    tools:context=".ShowData">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/teal_200"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/insetDataText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="Upload your information"
                android:textColor="@color/deepRed"
                android:textSize="36sp"
                android:gravity="center_horizontal"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"

            tools:layout_editor_absoluteX="17dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Select Date"
                    android:gravity="center_horizontal"
                    android:textColor="@color/deepRed"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/date_edit_text_id"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="21dp"
                    android:background="#E8DC72"
                    android:gravity="center_horizontal"



                    android:hint="Date"

                    android:padding="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                </EditText>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="Select Time"
                    android:gravity="center_horizontal"
                    android:textColor="@color/deepRed"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/time_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_horizontal"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="21dp"
                    android:background="#E8DC72"

                    android:hint="Time"

                    android:padding="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2">

                </EditText>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="Enter your Systolic BP"
                    android:gravity="center_horizontal"
                    android:textColor="@color/deepRed"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/systolic_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="21dp"
                    android:background="#E8DC72"
                    android:drawablePadding="12dp"
                    android:hint="80"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:padding="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3">

                </EditText>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="Enter your Diastolic BP"
                    android:gravity="center_horizontal"
                    android:textColor="@color/deepRed"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/diastolic_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="21dp"
                    android:gravity="center_horizontal"
                    android:background="#E8DC72"
                    android:drawablePadding="12dp"
                    android:hint="120"
                    android:inputType="number"
                    android:padding="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4">

                </EditText>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="Enter your Heart Rate"
                    android:gravity="center_horizontal"
                    android:textColor="@color/deepRed"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/heartRate_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="21dp"
                    android:background="#E8DC72"
                    android:drawablePadding="12dp"
                    android:hint="70"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:padding="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView6">

                </EditText>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="Add Comment"
                    android:gravity="center_horizontal"
                    android:textColor="@color/deepRed"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imageView5"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/comment_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="21dp"
                    android:background="#E8DC72"
                    android:drawablePadding="12dp"
                    android:gravity="top|start"


                    android:lines="8"
                    android:maxLines="10"
                    android:padding="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5">

                </EditText>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/save_button"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center"

                android:backgroundTint="#19A89B"
                android:text="Submit"

                android:textColor="@color/deepRed" />


        </LinearLayout>

    </ScrollView>


</LinearLayout>
