...
        android:id="@+id/constraintLayoutmain"
        android:layout_width="match_parent"
        android:background="#C1DEF8"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/edit_save"
            android:layout_width="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="18dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
...
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayoutmain"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" />

        <Button
            android:id="@+id/delete_imageBtn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"

            android:layout_marginTop="24dp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/teal_200">

            <EditText
                android:id="@+id/date_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@android:color/transparent"
                android:drawablePadding="8dp"
                android:focusable="false"
...
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/heart_rate_details"
                        android:layout_width="match_parent"
                        android:gravity="end"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="70"

...
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/systolic_rate_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:inputType="number"
                        android:text="85"
                        android:textColor="@color/black"
...
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/diastolic_rate_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="110"
                        android:gravity="end"
                        android:textColor="@color/black"
...
